--- a/prime_numbers.ipynb
+++ b/prime_numbers.ipynb
@@ -6,32 +6,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# initializing a list of prime numbers\n",
     "primes = [2]\n",
     "for num in range(3, 100):\n",
+    "    # assuming number as prime until it's determined as not\n",
     "    isPrime = True\n",
     "    for prime in primes:\n",
     "        if num % prime == 0:\n",
     "            isPrime = False\n",
     "            break\n",
     "    if isPrime:\n",
-    "        primes.append(num)\n"
+    "        primes.append(num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def primeList(n):\n",
+    "    # initializing a list of prime numbers\n",
+    "    primes = [2]\n",
+    "    for num in range(3, n):\n",
+    "        # assuming number as prime until it's determined as not\n",
+    "        isPrime = True\n",
+    "        for prime in primes:\n",
+    "            if num % prime == 0:\n",
+    "                isPrime = False\n",
+    "                break\n",
+    "        if isPrime:\n",
+    "            primes.append(num)\n",
+    "    return primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(primes)"
+    "primeList(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPrime(num):\n",
+    "    # assuming number as prime until it's determined as not\n",
+    "    prime = True\n",
+    "    # return false if input is <= 1\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    for x in range(2, num):\n",
+    "        if num % x == 0:\n",
+    "            prime = False\n",
+    "            break\n",
+    "    return prime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isPrime(3)"
    ]
   },
   {
