calculate the nth prime number

--- a/prime_numbers.ipynb
+++ b/prime_numbers.ipynb
@@ -6,25 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initializing a list of prime numbers\n",
-    "primes = [2]\n",
-    "for num in range(3, 100):\n",
-    "    # assuming number as prime until it's determined as not\n",
-    "    isPrime = True\n",
-    "    for prime in primes:\n",
-    "        if num % prime == 0:\n",
-    "            isPrime = False\n",
-    "            break\n",
-    "    if isPrime:\n",
-    "        primes.append(num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def primeList(n):\n",
     "    # initializing a list of prime numbers\n",
     "    primes = [2]\n",
@@ -42,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +32,7 @@
        "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +71,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,10 +82,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def nthPrime(n):\n",
+    "    if n <= 0:\n",
+    "        return \"invalid input, number must be greater than or equal to 1\"\n",
+    "    # using a counter to track the nth number of prime\n",
+    "    counter = 1\n",
+    "    # initializing 2 as the first prime number\n",
+    "    num = 2\n",
+    "    while counter != n:\n",
+    "        num += 1\n",
+    "        if isPrime(num):\n",
+    "            counter +=1\n",
+    "    return num      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nthPrime(5)"
+   ]
   }
  ],
  "metadata": {
